# SFTRACKINGLITE

./: .gitignore  Makefile  README.md
backend/: README.md  alembic.ini  launcher.py  pyproject.toml  run.py
backend/alembic/: env.py
backend/alembic/versions/: 20260308_0001_initial_schema.py
backend/app/: main.py
backend/app/core/: config.py  db.py  dependencies.py  scheduler.py
backend/app/models/: __init__.py  api_key.py  base.py  column_mapping_preset.py  order.py  order_tracking.py  polling_run.py  status_mapping.py  tracking.py  tracking_event.py  upload_batch.py  upload_error.py
backend/app/routers/: admin.py  dashboard.py  export.py  lite.py  runtime.py  settings.py  trackings.py  uploads.py
backend/app/schemas/: admin.py  dashboard.py  export.py  lite.py  runtime.py  settings.py  trackings.py  uploads.py
backend/app/services/: export_service.py  file_parser.py  lite_job_store.py  lite_result_store.py  lite_service.py  lite_status_mapper.py  polling_service.py  runtime_session_store.py  settings_service.py  sf_client.py  shutdown_coordinator.py  status_mapping_service.py  tracking_service.py  upload_service.py
backend/app/utils/: crypto.py  excel_safe.py  signature.py
backend/scripts/: analyze_sf_mapping.py  validate_sf_batch.py
backend/tests/: conftest.py  test_api.py  test_lite_api.py  test_lite_status_mapper.py  test_runtime_api.py  test_sf_client.py  test_utils.py
docs/: SF_TRACKING_DASHBOARD_GUIDE_ko.md  WINDOWS_PACKAGING_AND_UPDATE_ko.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  (+4 more)
(+8 files in other folders)
